--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [{ include = "tools" }]
 twf = 'tools.main:app'
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 typer = "^0.12.3"
 python-dateutil = "^2.8.2"
 questionary = "^2.0.1"
@@ -19,6 +19,7 @@ questionary = "^2.0.1"
 ruff = "^0.1.3"
 mypy = "^1.6.1"
 types-python-dateutil = "^2.8.19.14"
+pytest = "^8.2.0"
 
 [build-system]
 requires = ["poetry-core"]
