--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,14 @@ python = "^3.10"
 typer = "^0.12.3"
 python-dateutil = "^2.8.2"
 questionary = "^2.0.1"
+dateparser = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.3"
 mypy = "^1.6.1"
 types-python-dateutil = "^2.8.19.14"
 pytest = "^8.2.0"
+types-dateparser = "^1.2.0.20240420"
 
 [build-system]
 requires = ["poetry-core"]
@@ -36,3 +38,9 @@ ignore = []
 [project.urls]
 Homepage = "https://github.com/huantrinh1802/taskwarrior_flow"
 Issues = "https://github.com/huantrinh1802/taskwarrior_flow/issues"
+
+[tool.pytest.ini_options]
+log_cli = true
+log_level = "INFO"
+testpaths = ["tests"]
+addopts = "--capture=no"
