--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,14 +28,14 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-line-length = 120
+line-length = 320
 indent-width = 4
 
 [tool.ruff.lint]
 select = ["E4", "E5", "E7", "E9", "F", "I"]
 ignore = []
 
-[project.urls]
+[tool.poetry.urls]
 Homepage = "https://github.com/huantrinh1802/taskwarrior_flow"
 Issues = "https://github.com/huantrinh1802/taskwarrior_flow/issues"
 
